--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- https://youtu.be/Zwa5z9Ws7y4?si=TA9bQnki-SzblhhZ -->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -5,22 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <title>ScrollReveal</title>
 </head>
 <body>
     <section class="sec-01">
         <div class="container">
-            <h2 class="main-title">Testando a biblioteca ScrollReveal</h2>
+            <h2 class="main__title">Testando a biblioteca ScrollReveal</h2>
             <div class="content">
                 <div class="image">
                     <img src="OIP.jpeg" alt="">
                 </div>
-                <div class="text-box">
+                <div class="text__box">
                     <h3>Alguma coisa</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error voluptas saepe rerum id ut eius sapiente harum inventore eveniet! Voluptatum rerum reiciendis repellat voluptatem nisi, omnis rem illo doloribus quam?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quaerat quas rerum error, quidem sit minima libero molestiae vel eos. Quam repudiandae eveniet tempore numquam quo repellendus architecto, commodi perspiciatis!</p>
                 </div>
             </div>
-            <div class="media-icones">
+            <div class="media__icones">
                 <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#" class="icon"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#" class="icon"><i class="fa-brands fa-twitter"></i></a>
@@ -28,5 +31,37 @@
             </div>
         </div>
     </section>
+    <sectio class="sec__02">
+        <div class="container">
+            <h3 class="section__title">Mais alguma coisa </h3>
+            <div class="content">
+                <div class="image">
+                    <img src="OIP (1).jpeg" alt="">
+                </div>
+                <div class="info">
+                        <h4 class="info__title">Descrição</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic veritatis, nobis natus esse eveniet iste harum, ratione animi provident, eligendi incidunt molestiae? Beatae sunt quidem in quaerat odio veniam omnis?</p>
+                </div>
+            </div>
+        </div>
+    </sectio>
+    <section class="sec__03">
+        <div class="container">
+            <h3 class="section__title">Tururu</h3>
+            <div class="content">
+                <div class="media__info">
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i>facebook</a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i>instagram</a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i>twitter</a></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube"></i>youtube</a></li>
+                    <li><a href="#"><i class="fa-brands fa-linkedin"></i>linkedin</a></li>
+                </div>
+                <div class="image">
+                    <img src="fju5rxv4ljd51.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="./js/main.js"></script>
 </body>
 </html>
